app/assets/stylesheets/application.scss
@import "people";
@import "groups";

main#content {
  padding-bottom: 90px;
}

.breadcrumbs_and_edit_link {
  margin-top: 1em;
  margin-bottom: 1em;
}

.edit_this_page {
  float: right;
}

.breadcrumbs {
  display: inline-block;
}

.people-search {
  margin-top: 15px;

}
.people-search input.form-control {
  padding: 10px;
}
.people-search input[type='submit'] {
  position: absolute;
  margin-top: 2px;
  width: 47px;
  height: 47px;
  border: 1px solid #6F777B;
  border-width: 0 0 0 1px;
  text-indent: -5000px;
  overflow: hidden;
  background: #6F777B image-url("search-button.png") no-repeat 5px 50%;
}
.image-background {
  position: relative;
}
.image-background img {
  position: absolute;
}
#flash-messages {
  .flash-message {
    margin: 15px 0;
    padding: 15px;
  }
  .notice {
    background-color: #c9d8bd;
  }
}

a {
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

h1, h2 {
  margin: 30px 0;
  border-bottom: 1px solid black;
}

h4 {
  margin-top: 6px;
}

strong {
  font-weight: bold;
}

.title_with_edit {
  position: relative;
  a {
    position: absolute;
    right: 0;
    bottom: 13px;
  }
  h1, h2 {
    padding-right: 175px;
  }

}

textarea {
  height: 158px
}
.grey-panel {
  background-color: #DEE0E2;
  width: 47%;
  margin: 15px 0 15px 0;
  padding: 15px 15px 15px 15px;
  label.form-label-bold {
    font-size: 19px;
  }
  input.form-control {
    width: 95%;
  }
  select.form-control {
    width: 95%;
  }
  input.boolean {
    width: 20px;
  }
}
.remove-link {
  font-size: 19px;
}

select.form-control {
  -webkit-appearance: menulist;
}

